--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
  
    
     <main  class="container">
-        <div class="row d-flex align-items-center">
-            <div class="row mt-5">
-              <div class="col-6 mt-5">
+        <div class="row">
+            <div class="row  mt-5">
+              <div class="col-lg-6 col-sm-12 mt-5">
                <h1><span>BE THE PENGUINS</span><br> OF WINTER</h1>
                <p>Lorem Ipsum is simply dummy text of the printing <br>
 
                 and typesetting industry.</p>
                <button class="btn-design">Buy Now</button>
               </div>
-              <div class="col-6">
+              <div class="col-lg-6 col-sm-12">
                <img class="d-block w-100" src="image/profile.png" alt="">
               </div>
             </div>
