bonous section added

--- a/index.html
+++ b/index.html
@@ -297,6 +297,16 @@
           </div>
          
          </section>
+         <section class="container" style="margin-top: 100px; background-color: aquamarine;">
+           <div class="row">
+                  <div class="col-sm-12 col-lg-6">
+                          <h4 style="margin-top: 100px;"> Technology Used</h4>
+                  </div>
+                  <div class="col-sm-12 col-lg-6">
+                           <img  style="margin-top: 50px;" src="image/html.png" alt="">
+                  </div>
+           </div>
+         </section>
    
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
